# opavm

./: .coverage  .gitignore  .opa_history  .pre-commit-config.yaml  README.md  contribution.md  coverage.xml  license.md  pyproject.toml
.circleci/: config.yml
src/opavm/: __init__.py  __main__.py  catalog.py  cli.py  config.py  download.py  errors.py  github.py  installer.py  platform.py  resolver.py  runner.py  shim.py
tests/: test_cli_negative_paths.py  test_cli_smoke.py  test_github.py  test_installer_layout.py  test_platform.py  test_resolver.py  test_security_checks.py  test_shim.py  test_state.py
