[project]
name = "opavm"
version = "0.1.0"
description = "A dead-simple version manager for Open Policy Agent (OPA)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "typer>=0.21.1",
  "rich>=14.3.2",
  "httpx>=0.28.1",
  "platformdirs>=4.5.1",
]

[project.scripts]
opavm = "opavm.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=opavm --cov-report=term-missing --cov-report=xml --cov-fail-under=70"
