[project]
name = "opavm"
dynamic = ["version"]
description = "A dead-simple version manager for Open Policy Agent (OPA)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "typer>=0.21.1",
  "rich>=14.3.2",
  "httpx>=0.28.1",
  "platformdirs>=4.5.1",
]

[project.scripts]
opavm = "opavm.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
local_scheme = "no-local-version"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=opavm --cov-report=term-missing --cov-report=xml --cov-fail-under=70"
